--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import FormattedDate from '../components/FormattedDate.astro';
 
 const posts = (await getCollection('blog')).sort(
 	// Sort by date from newest to oldest
-	(a, b) =>  b.data.createdAt.valueOf() - a.data.createdAt.valueOf() 
+	(a, b) =>  b.data.pubDate.valueOf() - a.data.pubDate.valueOf() 
 );
 ---
 
@@ -98,7 +98,7 @@ const posts = (await getCollection('blog')).sort(
 									<img width={720} height={360} src={post.data.heroImage} alt="" />
 									<h4 class="title">{post.data.title}</h4>
 									<p class="date">
-										<FormattedDate date={post.data.createdAt} />
+										<FormattedDate date={post.data.pubDate} />
 									</p>
 								</a>
 							</li>
